# opr-rs

./: Cargo.toml  update-test-data.sh
.github/workflows/: rust.yml  zizmor.yml
opr/: Cargo.toml
opr-test-data/: Cargo.toml
opr-test-data/src/: lib.rs
opr-test-data/src/data/: common-rules  common-rules-2  common-rules-3  common-rules-4  common-rules-5  common-rules-6  common-rules-regiments  common-rules-skirmish
opr-test-data/src/data/armies/: 0EDhaE_Btbxl  2HhzjGpcm5m7  F0SbXPX_MVfK  Fo0E1N9XTt78  IIf1w9UTuaFZ  Mlwpoh1AGLC2  R1wlhx_GosCz  Rrlct39EGuct  ZIehRfQJO8-K  ZTgIvcYABynP  dVlqH2ICxln2  nLBrzTpB1TTJ  ncZ8fP3RPULt  nzTpaov-wlwd  p2KIbSBOYpSB  vpa-qXmUbXmP  ybjR2-7kHUNY  zhz5uajqHdt5
opr-test-data/src/data/books/: 4k5amkxoybdiqotm-2  4k5amkxoybdiqotm-3  7el7k3hgy5pb9o9i-2  7oi8zeiqfamiur21-2  oqnnu0gk8q6hyyny-2
opr-tests/: Cargo.toml  build.rs
opr-tests/tests/: check_structs.rs
opr/src/: lib.rs
opr/tests/: check_structs.rs
src/: lib.rs  tests.rs
src/test-data/: Mlwpoh1AGLC2  Rrlct39EGuct  dVlqH2ICxln2  p2KIbSBOYpSB
src/test-data/armies/: 2HhzjGpcm5m7  Mlwpoh1AGLC2  nLBrzTpB1TTJ  ybjR2-7kHUNY
tests/: check_structs.rs
tests/data/armies/: nzTpaov-wlwd
