[package]
name = "opr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.195", features = ["derive", "rc"] }
serde-aux = { version = "4.4.0", default-features = false }

[build-dependencies]
opr-test-data = { path = "../opr-test-data" }

[dev-dependencies]
rstest = { version = "0.18.2", default-features = false }
serde_json = "1.0"
