[package]
name = "opr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
itertools = { version = ">= 0.13.0, < 0.15.0" }
serde = { version = "1.0.195", features = ["derive", "rc"] }
serde-aux = { version = "4.4.0", default-features = false }

[features]
# Intended for local testing of web apps using data from
# opr-test-data, that need to be accessible from a local webserver in
# /data/, as installed by `opr_test_data::import_data()`.
local-files = []
